feat: Add API to control whether to reset the dropdown after value change when using backend dataprovider